# AnoPlib

./: AUTHORS  LICENSE  Makefile.am  README.md  configure.ac
src/: AnoP.h  AnoPemergency1.h  AnoPflashlight1.h  AnoPhelpers.cpp  AnoPhelpers.h  AnoPprototyper.cpp  AnoPstarfield1.h  AnoPtentacle1.h  AnoPtest.cpp  AnoPwavelogo1.h  AnoPwavepropagation1.h  Makefile.am
